--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-dom": "^16.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=\"--openssl-legacy-provider\" react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -29,5 +28,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "fsevents": "^1.2.13",
+    "react-scripts": "^2.1.3"
+  }
 }
